background layout bug on mobile #15

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,11 +8,6 @@
   src: url("../resources/fonts//pokemon-solid.ttf");
 }
 
-html {
-  height:100vh;
-  width:100vw
-}
-
 /* background image */
 body {
   background-image: url("../resources/background.jpg");
@@ -20,6 +15,7 @@ body {
   background-attachment: fixed;
   background-size: 100vw 100vh;
   font-family: pokemonFontSolid;
+  overflow-y: scroll;
 }
 
 .navbar {
